   glDisableVertexAttribPointer() and binding the shader program. This is
   now done by the renderer. Reimplementations of these functions which
   are not calling the baseclass will need to take this into account.

 - The scene graph now requires a call to QSGNode::markDirty() with the
   flag QSGNode::DirtySubtreeBlocked whenever the state of
   QSGNode::isSubtreeBlocked() is changed.

****************************************************************************
*                          Library                                         *
****************************************************************************

QtQml
------

QtQuick
------

- New scene graph renderer should reduce state changes, number of draw calls,
  CPU->GPU bandwidth and generally improve performance.

- Textures in the scene graph can now be entered into an atlas, facilitating
  in better batching in the renderer. Atlas textures are enabled by passing
  QQuickWindow::TextureCanUseAtlas to QQuickWindow::createTextureFromImage()

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************

